# MBO-DL

./: .dockerignore  .gitignore  .mcp.json  .orchestration-kit.env  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  HANDOFF.md  ORCHESTRATOR_SPEC.md  README.md  RESEARCH_AUDIT.md  RESEARCH_AUDIT_SPEC.md  TRAJECTORY.md  requirements.txt
.claude/commands/: synthesize.md
.claude/hooks/: pre-tool-use.sh
.claude/prompts/: frame.md  math-audit.md  math-construct.md  math-formalize.md  math-polish.md  math-prove.md  math-specify.md  math-survey.md  read.md  run.md  survey.md  synthesize.md  tdd-breadcrumbs.md  tdd-green.md  tdd-red.md  tdd-refactor.md
.kit/: AGENTS.md  DOMAIN_PRIORS.md  LAST_TOUCH.md  NEXT_STEPS.md  PRD.md  QUESTIONS.md  RESEARCH_LOG.md  SYNTHESIS.md  cloud-state.json  program_state.json
.kit/docs/: bar-construction.md  bar-feature-export-geometry.md  bar-feature-export.md  bidirectional-export-wiring.md  bidirectional-label-export.md  book-builder.md  cloud-run-reliability.md  cnn-model.md  experiment-batch-command.md  feature-analysis.md  feature-computation.md  feature-encoder.md  gbt-model.md  hybrid-model.md  integration-overfit.md  mlp-model.md  multi-day-backtest.md  n128-overfit.md  nested-run-visibility.md  oracle-expectancy-params.md  oracle-expectancy.md  oracle-replay.md  oracle-trajectory.md  parallel-batch-dispatch.md  parquet-export.md  research-cloud-execution.md  research-engineering-practices.md  serialization.md  tick-bar-fix.md  time-horizon-cli.md
.kit/experiments/: barrier-geometry-exploration.md  bidirectional-reexport.md  book-encoder-bias.md  class-weighted-stage1.md  cnn-gbt-corrected-pipeline.md  cnn-reproduction-diagnostic.md  cpcv-corrected-costs.md  e2e-cnn-classification.md  full-year-export.md  hybrid-model-corrected.md  hybrid-model-training.md  info-decomposition.md  label-design-sensitivity.md  label-geometry-1h.md  pnl-realized-return.md  r3-reproduction-pipeline-comparison.md  r3b-genuine-tick-bars.md  regime-stratified-info-decomposition.md  subordination-test.md  survey-e2e-cnn-classification.md  survey-r3b-event-bar-cnn.md  survey-temporal-predictability-completion.md  survey-temporal-predictability-dollar-tick-actionable.md  synthesis.md  temporal-predictability-completion.md  temporal-predictability-dollar-tick-actionable.md  temporal-predictability-event-bars.md  temporal-predictability.md  threshold-sweep.md  timeout-filtered-sequential.md  trade-level-risk-metrics.md  volume-flow-conditioned-entry.md  xgb-hyperparam-tuning.md
ML-Folk-Knowledge/: claude-deep-research.md  gemini-deep-research.md  gpt-deep-research.md
cmake/: FindRApiPlus.cmake  Findonnxruntime.cmake
completed_specs/: ORCHESTRATOR_SPEC.md
research/: R2_information_decomposition.py  R3_book_encoder_bias.py  R4_temporal_predictability.py  R4c_temporal_predictability_completion.py  R4d_phase3_single.py  R4d_temporal_predictability_dollar_tick_actionable.py  R6_synthesis.py
scripts/hybrid_model/: __init__.py  cnn_encoder.py  cnn_encoder_r3.py  config.py  data_loader.py  evaluate_cv.py  extract_embeddings.py  metrics.py  run_all.py  run_cnn_diagnostic.py  run_corrected_experiment.py  run_event_bar_cnn.py  run_experiment.py  run_r3_reproduction.py  train_cnn.py  train_xgboost.py
src/: README.md  book_builder.hpp  cnn_model.hpp  feature_encoder.hpp  gbt_features.hpp  gbt_model.hpp  mlp_model.hpp  oracle_labeler.hpp  serialization.hpp  time_utils.hpp  training_loop.hpp  trajectory_builder.hpp
src/analysis/: README.md  analysis_result.hpp  bar_comparison.hpp  conditional_returns.hpp  decay_analysis.hpp  gbt_importance.hpp  multiple_comparison.hpp  mutual_information.hpp  power_analysis.hpp  spearman.hpp  statistical_tests.hpp
src/backtest/: backtest_result_io.hpp  execution_costs.hpp  multi_day_runner.hpp  oracle_comparison.hpp  oracle_expectancy_report.hpp  oracle_replay.hpp  regime_stratification.hpp  rollover.hpp  success_criteria.hpp  trade_record.hpp  triple_barrier.hpp
src/bars/: bar.hpp  bar_builder_base.hpp  bar_factory.hpp  dollar_bar_builder.hpp  tick_bar_builder.hpp  time_bar_builder.hpp  (+1 more)
tests/: README.md  backtest_criteria_test.cpp  bar_builder_test.cpp  bar_comparison_test.cpp  bar_feature_export_geometry_test.cpp  bar_feature_export_test.cpp  bar_features_test.cpp  bidirectional_export_test.cpp  bidirectional_tb_test.cpp  book_builder_test.cpp  cnn_model_test.cpp  conditional_returns_test.cpp  day_event_buffer_test.cpp  execution_costs_test.cpp  feature_encoder_test.cpp  feature_export_test.cpp  feature_mi_test.cpp  feature_warmup_test.cpp  gbt_features_test.cpp  gbt_importance_test.cpp  gbt_model_test.cpp  hybrid_model_tb_label_test.cpp  integration_overfit_test.cpp  mlp_model_test.cpp  multi_day_backtest_test.cpp  n128_overfit_test.cpp  oracle_comparison_test.cpp  oracle_expectancy_params_test.cpp  oracle_expectancy_test.cpp  oracle_labeler_test.cpp  oracle_replay_test.cpp  parquet_export_test.cpp  raw_representations_test.cpp  regime_stratification_test.cpp  serialization_test.cpp  test_bar_helpers.hpp  test_cloud_run_reliability.py  test_cnn_encoder.py  test_data_loader.py  test_evaluation.py  (+10 more)
tools/: bar_feature_export.cpp  info_decomposition_export.cpp  oracle_expectancy.cpp  subordination_test.cpp
(+2886 files in other folders)
